Add redis support

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -1,3 +1,4 @@
 unexpected.error=Unexpected error occurred.
 unauthorized.error=You don't have a permission for this operation.
 validation.error=Bad request, missing field: {0}
+session.already.exists=There is an active session so you cant create again!, please try again later.
