--- a/src/main/resources/messages/messages_tr.properties
+++ b/src/main/resources/messages/messages_tr.properties
@@ -1,3 +1,4 @@
 unexpected.error=Beklenmedik bir hata oluştu.
 unauthorized.error=Bu işlem için yetkiniz bulunmamaktadır.
 validation.error=Hatalı istek, şu bilgi bulunamadı: {0}
+session.already.exists=Aktik session var yeni session olu?turamazs?n?z.
